[gd_scene load_steps=10 format=2]

[ext_resource path="res://post_process/pp_dither.tres" type="Material" id=1]
[ext_resource path="res://post_process/pp_blur_mat.tres" type="Material" id=2]
[ext_resource path="res://post_process/pp_lcd_mat.tres" type="Material" id=3]
[ext_resource path="res://Stage.tscn" type="PackedScene" id=4]
[ext_resource path="res://Nodes/Menu.gd" type="Script" id=5]
[ext_resource path="res://post_process/value_label.gd" type="Script" id=6]
[ext_resource path="res://Textures/Title1.png" type="Texture" id=7]
[ext_resource path="res://post_process/options.gd" type="Script" id=8]
[ext_resource path="res://Nodes/GamePanel.gd" type="Script" id=9]

[node name="Node" type="Node"]

[node name="PSXLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="BlurPostProcess" type="ViewportContainer" parent="PSXLayer"]
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="PSXLayer/BlurPostProcess"]
size = Vector2( 960, 720 )
handle_input_locally = false
render_target_update_mode = 3
audio_listener_enable_2d = true
audio_listener_enable_3d = true

[node name="LCDOverlay" type="ViewportContainer" parent="PSXLayer/BlurPostProcess/Viewport"]
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="PSXLayer/BlurPostProcess/Viewport/LCDOverlay"]
size = Vector2( 960, 720 )
handle_input_locally = false
render_target_update_mode = 3
audio_listener_enable_2d = true
audio_listener_enable_3d = true

[node name="DitherBanding" type="ViewportContainer" parent="PSXLayer/BlurPostProcess/Viewport/LCDOverlay/Viewport"]
material = ExtResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true
stretch_shrink = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="PSXLayer/BlurPostProcess/Viewport/LCDOverlay/Viewport/DitherBanding"]
size = Vector2( 320, 240 )
handle_input_locally = false
render_target_update_mode = 3
audio_listener_enable_2d = true
audio_listener_enable_3d = true

[node name="Stage" parent="PSXLayer/BlurPostProcess/Viewport/LCDOverlay/Viewport/DitherBanding/Viewport" instance=ExtResource( 4 )]

[node name="GUILayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Menu" type="Control" parent="GUILayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )

[node name="TitleBG" type="TextureRect" parent="GUILayer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="ColorRect" type="ColorRect" parent="GUILayer/Menu/TitleBG"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.482353 )

[node name="Start" type="Control" parent="GUILayer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Button" type="Button" parent="GUILayer/Menu/Start"]
margin_left = 396.0
margin_top = 340.0
margin_right = 564.0
margin_bottom = 383.0
text = "New Game"

[node name="Button2" type="Button" parent="GUILayer/Menu/Start"]
margin_left = 396.0
margin_top = 396.0
margin_right = 564.0
margin_bottom = 439.0
text = "Options"

[node name="Button4" type="Button" parent="GUILayer/Menu/Start"]
margin_left = 396.0
margin_top = 451.0
margin_right = 564.0
margin_bottom = 494.0
text = "Instructions"

[node name="Button3" type="Button" parent="GUILayer/Menu/Start"]
margin_left = 396.0
margin_top = 506.0
margin_right = 564.0
margin_bottom = 549.0
text = "Quit"

[node name="GamePanel" type="Panel" parent="GUILayer/Menu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -100.0
margin_right = 125.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUILayer/Menu/GamePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="GridWidth" type="HBoxContainer" parent="GUILayer/Menu/GamePanel/VBoxContainer"]
margin_right = 242.0
margin_bottom = 16.0

[node name="Title" type="Label" parent="GUILayer/Menu/GamePanel/VBoxContainer/GridWidth"]
margin_right = 90.0
margin_bottom = 16.0
text = "Grid Width"

[node name="HSlider" type="HSlider" parent="GUILayer/Menu/GamePanel/VBoxContainer/GridWidth"]
margin_left = 94.0
margin_right = 229.0
margin_bottom = 16.0
focus_mode = 0
size_flags_horizontal = 3
min_value = 9.0
max_value = 40.0
value = 9.0

[node name="Value" type="Label" parent="GUILayer/Menu/GamePanel/VBoxContainer/GridWidth"]
margin_left = 233.0
margin_right = 242.0
margin_bottom = 16.0
text = "9"
script = ExtResource( 6 )

[node name="GridHeight" type="HBoxContainer" parent="GUILayer/Menu/GamePanel/VBoxContainer"]
margin_top = 20.0
margin_right = 242.0
margin_bottom = 36.0

[node name="Title" type="Label" parent="GUILayer/Menu/GamePanel/VBoxContainer/GridHeight"]
margin_right = 99.0
margin_bottom = 16.0
text = "Grid Height"

[node name="HSlider" type="HSlider" parent="GUILayer/Menu/GamePanel/VBoxContainer/GridHeight"]
margin_left = 103.0
margin_right = 229.0
margin_bottom = 16.0
focus_mode = 0
size_flags_horizontal = 3
min_value = 9.0
max_value = 40.0
value = 9.0

[node name="Value" type="Label" parent="GUILayer/Menu/GamePanel/VBoxContainer/GridHeight"]
margin_left = 233.0
margin_right = 242.0
margin_bottom = 16.0
text = "9"
script = ExtResource( 6 )

[node name="HSeparator2" type="HSeparator" parent="GUILayer/Menu/GamePanel/VBoxContainer"]
margin_top = 40.0
margin_right = 242.0
margin_bottom = 44.0

[node name="Mines" type="HBoxContainer" parent="GUILayer/Menu/GamePanel/VBoxContainer"]
margin_top = 48.0
margin_right = 242.0
margin_bottom = 64.0

[node name="Title" type="Label" parent="GUILayer/Menu/GamePanel/VBoxContainer/Mines"]
margin_right = 45.0
margin_bottom = 16.0
text = "Mines"

[node name="HSlider" type="HSlider" parent="GUILayer/Menu/GamePanel/VBoxContainer/Mines"]
margin_left = 49.0
margin_right = 229.0
margin_bottom = 16.0
focus_mode = 0
size_flags_horizontal = 3
min_value = 9.0
max_value = 400.0
value = 9.0

[node name="Value" type="Label" parent="GUILayer/Menu/GamePanel/VBoxContainer/Mines"]
margin_left = 233.0
margin_right = 242.0
margin_bottom = 16.0
text = "9"
script = ExtResource( 6 )

[node name="HSeparator4" type="HSeparator" parent="GUILayer/Menu/GamePanel/VBoxContainer"]
margin_top = 68.0
margin_right = 242.0
margin_bottom = 72.0

[node name="Warning" type="Label" parent="GUILayer/Menu/GamePanel/VBoxContainer"]
margin_top = 76.0
margin_right = 242.0
margin_bottom = 130.0
text = "WARNING: Large grids with
minimal mines may have
performance issues."

[node name="Button5" type="Button" parent="GUILayer/Menu/GamePanel"]
margin_left = 41.0
margin_top = 207.0
margin_right = 209.0
margin_bottom = 250.0
text = "Back"

[node name="StartButton" type="Button" parent="GUILayer/Menu/GamePanel"]
margin_left = 41.0
margin_top = 142.0
margin_right = 209.0
margin_bottom = 185.0
text = "Start"

[node name="OptionsPanel" type="Panel" parent="GUILayer/Menu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -100.0
margin_right = 125.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 8 )
post_process_lcd = ExtResource( 3 )
post_process_blur = ExtResource( 2 )
post_process_dither_band = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUILayer/Menu/OptionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="FPS" type="HBoxContainer" parent="GUILayer/Menu/OptionsPanel/VBoxContainer"]
margin_right = 242.0
margin_bottom = 16.0

[node name="Title" type="Label" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/FPS"]
margin_right = 27.0
margin_bottom = 16.0
text = "FPS"

[node name="HSlider" type="HSlider" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/FPS"]
margin_left = 31.0
margin_right = 220.0
margin_bottom = 16.0
focus_mode = 0
size_flags_horizontal = 3
min_value = 10.0
max_value = 60.0
value = 60.0

[node name="Value" type="Label" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/FPS"]
margin_left = 224.0
margin_right = 242.0
margin_bottom = 16.0
text = "60"
script = ExtResource( 6 )

[node name="HSeparator2" type="HSeparator" parent="GUILayer/Menu/OptionsPanel/VBoxContainer"]
margin_top = 20.0
margin_right = 242.0
margin_bottom = 24.0

[node name="ColorDepth" type="HBoxContainer" parent="GUILayer/Menu/OptionsPanel/VBoxContainer"]
margin_top = 28.0
margin_right = 242.0
margin_bottom = 44.0

[node name="Title" type="Label" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/ColorDepth"]
margin_right = 90.0
margin_bottom = 16.0
text = "Col. Depth"

[node name="HSlider" type="HSlider" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/ColorDepth"]
margin_left = 94.0
margin_right = 220.0
margin_bottom = 16.0
focus_mode = 0
size_flags_horizontal = 3
min_value = 1.0
max_value = 32.0
value = 15.0

[node name="Value" type="Label" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/ColorDepth"]
margin_left = 224.0
margin_right = 242.0
margin_bottom = 16.0
text = "15"
script = ExtResource( 6 )

[node name="DitherBanding" type="HBoxContainer" parent="GUILayer/Menu/OptionsPanel/VBoxContainer"]
margin_top = 48.0
margin_right = 242.0
margin_bottom = 72.0

[node name="Title" type="Label" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/DitherBanding"]
margin_top = 4.0
margin_right = 126.0
margin_bottom = 20.0
text = "Dither Banding"

[node name="CheckBox" type="CheckBox" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/DitherBanding"]
margin_left = 218.0
margin_right = 242.0
margin_bottom = 24.0
focus_mode = 0
size_flags_horizontal = 10
pressed = true
enabled_focus_mode = 0

[node name="HSeparator4" type="HSeparator" parent="GUILayer/Menu/OptionsPanel/VBoxContainer"]
margin_top = 76.0
margin_right = 242.0
margin_bottom = 80.0

[node name="LCDOverlay" type="HBoxContainer" parent="GUILayer/Menu/OptionsPanel/VBoxContainer"]
margin_top = 84.0
margin_right = 242.0
margin_bottom = 108.0

[node name="Title" type="Label" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDOverlay"]
margin_top = 4.0
margin_right = 99.0
margin_bottom = 20.0
text = "LCD Overlay"

[node name="CheckBox" type="CheckBox" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDOverlay"]
margin_left = 218.0
margin_right = 242.0
margin_bottom = 24.0
focus_mode = 0
size_flags_horizontal = 10
enabled_focus_mode = 0

[node name="LCDOpacity" type="HBoxContainer" parent="GUILayer/Menu/OptionsPanel/VBoxContainer"]
visible = false
margin_top = 112.0
margin_right = 192.0
margin_bottom = 128.0

[node name="Title" type="Label" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDOpacity"]
margin_right = 63.0
margin_bottom = 16.0
text = "Opacity"

[node name="HSlider" type="HSlider" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDOpacity"]
margin_left = 67.0
margin_right = 161.0
margin_bottom = 16.0
focus_mode = 0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5

[node name="Value" type="Label" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDOpacity"]
margin_left = 165.0
margin_right = 192.0
margin_bottom = 16.0
text = "0.5"
script = ExtResource( 6 )

[node name="LCDScanlineGap" type="HBoxContainer" parent="GUILayer/Menu/OptionsPanel/VBoxContainer"]
visible = false
margin_top = 132.0
margin_right = 192.0
margin_bottom = 148.0

[node name="Title" type="Label" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDScanlineGap"]
margin_right = 81.0
margin_bottom = 16.0
text = "Scan. Gap"

[node name="HSlider" type="HSlider" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDScanlineGap"]
margin_left = 85.0
margin_right = 170.0
margin_bottom = 16.0
focus_mode = 0
size_flags_horizontal = 3
max_value = 16.0
value = 4.0
rounded = true

[node name="Value" type="Label" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDScanlineGap"]
margin_left = 174.0
margin_right = 192.0
margin_bottom = 16.0
text = "04"
script = ExtResource( 6 )

[node name="HSeparator" type="HSeparator" parent="GUILayer/Menu/OptionsPanel/VBoxContainer"]
margin_top = 112.0
margin_right = 242.0
margin_bottom = 116.0

[node name="MouseSensitivity" type="HBoxContainer" parent="GUILayer/Menu/OptionsPanel/VBoxContainer"]
margin_top = 120.0
margin_right = 242.0
margin_bottom = 136.0

[node name="Title" type="Label" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/MouseSensitivity"]
margin_right = 99.0
margin_bottom = 16.0
text = "Mouse Sens."

[node name="HSlider" type="HSlider" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/MouseSensitivity"]
margin_left = 103.0
margin_right = 220.0
margin_bottom = 16.0
focus_mode = 0
size_flags_horizontal = 3
value = 20.0
rounded = true

[node name="Value" type="Label" parent="GUILayer/Menu/OptionsPanel/VBoxContainer/MouseSensitivity"]
margin_left = 224.0
margin_right = 242.0
margin_bottom = 16.0
text = "20"
script = ExtResource( 6 )

[node name="Button5" type="Button" parent="GUILayer/Menu/OptionsPanel"]
margin_left = 41.0
margin_top = 207.0
margin_right = 209.0
margin_bottom = 250.0
text = "Back"

[node name="InstructionsPanel" type="Panel" parent="GUILayer/Menu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -100.0
margin_right = 125.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GUILayer/Menu/InstructionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Title" type="Label" parent="GUILayer/Menu/InstructionsPanel/VBoxContainer"]
margin_right = 242.0
margin_bottom = 16.0
text = "Instructions"

[node name="HSeparator" type="HSeparator" parent="GUILayer/Menu/InstructionsPanel/VBoxContainer"]
margin_top = 20.0
margin_right = 242.0
margin_bottom = 24.0

[node name="Button5" type="Button" parent="GUILayer/Menu/InstructionsPanel"]
margin_left = 41.0
margin_top = 207.0
margin_right = 209.0
margin_bottom = 250.0
text = "Back"

[node name="RichTextLabel" type="RichTextLabel" parent="GUILayer/Menu/InstructionsPanel"]
margin_left = 4.0
margin_top = 32.0
margin_right = 246.0
margin_bottom = 193.0
bbcode_text = "Controls

- W A S D - Move
- Space - Jump
- E - Place flag
- ESC / P - Pause
- F1 - Toggle Fullscreen
- Mouse - Look around


- To press a tile, you must jump on it.

- To win the game, you must press every tile that doesn't contain a mine.

- To flag a tile, point at it with the crosshair and press E.

- Numbered tiles represent how many mines are contained within the 8 tiles surrounding it."
text = "Controls

- W A S D - Move
- Space - Jump
- E - Place flag
- ESC / P - Pause
- F1 - Toggle Fullscreen
- Mouse - Look around


- To press a tile, you must jump on it.

- To win the game, you must press every tile that doesn't contain a mine.

- To flag a tile, point at it with the crosshair and press E.

- Numbered tiles represent how many mines are contained within the 8 tiles surrounding it."

[connection signal="pressed" from="GUILayer/Menu/Start/Button" to="GUILayer/Menu/Start" method="set_visible" binds= [ false ]]
[connection signal="pressed" from="GUILayer/Menu/Start/Button" to="GUILayer/Menu/GamePanel" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="GUILayer/Menu/Start/Button2" to="GUILayer/Menu/Start" method="set_visible" binds= [ false ]]
[connection signal="pressed" from="GUILayer/Menu/Start/Button2" to="GUILayer/Menu/OptionsPanel" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="GUILayer/Menu/Start/Button4" to="GUILayer/Menu/Start" method="set_visible" binds= [ false ]]
[connection signal="pressed" from="GUILayer/Menu/Start/Button4" to="GUILayer/Menu/InstructionsPanel" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="GUILayer/Menu/Start/Button3" to="GUILayer/Menu" method="_on_Button3_pressed"]
[connection signal="value_changed" from="GUILayer/Menu/GamePanel/VBoxContainer/GridWidth/HSlider" to="GUILayer/Menu/GamePanel" method="set_grid_width"]
[connection signal="value_changed" from="GUILayer/Menu/GamePanel/VBoxContainer/GridWidth/HSlider" to="GUILayer/Menu/GamePanel/VBoxContainer/GridWidth/Value" method="set_text_from_value" flags=3]
[connection signal="value_changed" from="GUILayer/Menu/GamePanel/VBoxContainer/GridHeight/HSlider" to="GUILayer/Menu/GamePanel" method="set_grid_height"]
[connection signal="value_changed" from="GUILayer/Menu/GamePanel/VBoxContainer/GridHeight/HSlider" to="GUILayer/Menu/GamePanel/VBoxContainer/GridHeight/Value" method="set_text_from_value" flags=3]
[connection signal="value_changed" from="GUILayer/Menu/GamePanel/VBoxContainer/Mines/HSlider" to="GUILayer/Menu/GamePanel" method="set_mines"]
[connection signal="value_changed" from="GUILayer/Menu/GamePanel/VBoxContainer/Mines/HSlider" to="GUILayer/Menu/GamePanel/VBoxContainer/Mines/Value" method="set_text_from_value" flags=3]
[connection signal="pressed" from="GUILayer/Menu/GamePanel/Button5" to="GUILayer/Menu/Start" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="GUILayer/Menu/GamePanel/Button5" to="GUILayer/Menu/GamePanel" method="set_visible" binds= [ false ]]
[connection signal="pressed" from="GUILayer/Menu/GamePanel/StartButton" to="GUILayer/Menu" method="set_visible" binds= [ false ]]
[connection signal="pressed" from="GUILayer/Menu/GamePanel/StartButton" to="GUILayer/Menu/Start" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="GUILayer/Menu/GamePanel/StartButton" to="GUILayer/Menu/GamePanel" method="set_visible" binds= [ false ]]
[connection signal="pressed" from="GUILayer/Menu/GamePanel/StartButton" to="GUILayer/Menu/GamePanel" method="start_button_pressed"]
[connection signal="value_changed" from="GUILayer/Menu/OptionsPanel/VBoxContainer/FPS/HSlider" to="GUILayer/Menu/OptionsPanel" method="set_fov" flags=3]
[connection signal="value_changed" from="GUILayer/Menu/OptionsPanel/VBoxContainer/FPS/HSlider" to="GUILayer/Menu/OptionsPanel/VBoxContainer/FPS/Value" method="set_text_from_value" flags=3]
[connection signal="value_changed" from="GUILayer/Menu/OptionsPanel/VBoxContainer/ColorDepth/HSlider" to="GUILayer/Menu/OptionsPanel" method="set_color_depth" flags=3]
[connection signal="value_changed" from="GUILayer/Menu/OptionsPanel/VBoxContainer/ColorDepth/HSlider" to="GUILayer/Menu/OptionsPanel/VBoxContainer/ColorDepth/Value" method="set_text_from_value" flags=3]
[connection signal="toggled" from="GUILayer/Menu/OptionsPanel/VBoxContainer/DitherBanding/CheckBox" to="GUILayer/Menu/OptionsPanel" method="set_dither_banding" flags=3]
[connection signal="toggled" from="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDOverlay/CheckBox" to="GUILayer/Menu/OptionsPanel" method="set_post_process" flags=3]
[connection signal="toggled" from="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDOverlay/CheckBox" to="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDOpacity" method="set_visible" flags=3]
[connection signal="toggled" from="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDOverlay/CheckBox" to="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDScanlineGap" method="set_visible" flags=3]
[connection signal="value_changed" from="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDOpacity/HSlider" to="GUILayer/Menu/OptionsPanel" method="set_lcd_opacity" flags=3]
[connection signal="value_changed" from="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDOpacity/HSlider" to="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDOpacity/Value" method="set_text_from_value" flags=3 binds= [ false ]]
[connection signal="value_changed" from="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDScanlineGap/HSlider" to="GUILayer/Menu/OptionsPanel" method="set_lcd_scanline_gap" flags=3]
[connection signal="value_changed" from="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDScanlineGap/HSlider" to="GUILayer/Menu/OptionsPanel/VBoxContainer/LCDScanlineGap/Value" method="set_text_from_value" flags=3 binds= [ true ]]
[connection signal="value_changed" from="GUILayer/Menu/OptionsPanel/VBoxContainer/MouseSensitivity/HSlider" to="GUILayer/Menu/OptionsPanel" method="set_mouse_sensitivity"]
[connection signal="value_changed" from="GUILayer/Menu/OptionsPanel/VBoxContainer/MouseSensitivity/HSlider" to="GUILayer/Menu/OptionsPanel/VBoxContainer/MouseSensitivity/Value" method="set_text_from_value" flags=3 binds= [ true ]]
[connection signal="pressed" from="GUILayer/Menu/OptionsPanel/Button5" to="GUILayer/Menu/Start" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="GUILayer/Menu/OptionsPanel/Button5" to="GUILayer/Menu/OptionsPanel" method="set_visible" binds= [ false ]]
[connection signal="pressed" from="GUILayer/Menu/InstructionsPanel/Button5" to="GUILayer/Menu/Start" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="GUILayer/Menu/InstructionsPanel/Button5" to="GUILayer/Menu/InstructionsPanel" method="set_visible" binds= [ false ]]
